@@ -60,7 +60,6 @@ import org.apache.logging.log4j.LogManager;
 
 import java.io.BufferedReader;
 import java.io.File;
-import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
@@ -170,7 +169,7 @@ public class DBUtil {
 			
 			// Instantiate driver
             Class<Driver> driverClass = BeanUtil.forName(driverClassName);
-            Driver driver = driverClass.newInstance();
+            Driver driver = driverClass.getDeclaredConstructor().newInstance();
             
             // Wrap connection properties
 	        java.util.Properties info = new java.util.Properties();
@@ -724,7 +723,7 @@ public class DBUtil {
 	}
 
 	public static void insert(String table, Connection connection, DatabaseDialect dialect, Object... values) throws SQLException {
-		DBUtil.executeUpdate(SQLUtil.insert(table, dialect, values), connection);
+		DBUtil.executeUpdate(SQLUtil.insert(connection.getCatalog(), connection.getSchema(), table, dialect, values), connection);
 	}
 
 }
